# chatdocs

./: .editorconfig  .gitignore  README.md  cspell.config.yaml  pyproject.toml  requirements.txt  setup.cmd  setup.py  taskfile.yml
.cspell/: chatdocs-dictionary.txt
