[tool.poetry]
name = "chatdocs"
version = "0.2.6"
description = "Chat with your documents offline using AI."
authors = ["Ravindra Marella <mv.ravindra007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

accelerate = ">=0.20.3"
chromadb = ">=0.3.0,<0.4.0"
ctransformers = ">=0.2.25,<0.3.0"
deepmerge = ">=1.1.0,<2.0.0"
InstructorEmbedding = ">=1.0.1,<2.0.0"
langchain = ">=0.0.181"
pydantic = ">=1.9,<2.0"
pyyaml = ">=6.0"
quart = ">=0.18.3,<0.19.0"
sentence-transformers = ">=2.2.2,<3.0.0"
tqdm = ">=4.64.1,<5.0.0"
transformers = ">=4.32.0"
typer = ">=0.9.0"
typing-extensions = ">=4.4.0,<5.0.0"
# Document Loaders
extract-msg = ">=0.41.0,<0.42.0"
pandoc = ">=2.3,<3.0.0"
pypandoc = ">=1.11,<2.0.0"
unstructured = ">=0.6.0,<0.7.0"
"pdfminer.six" = "==20221105"
# Temporary fix for `rich`, `numpy` version conflicts.
argilla = "==1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
