[tool.poetry]
name = "chatdocs"
version = "0.2.6"
description = "Chat with your documents offline using AI."
authors = ["Ravindra Marella <mv.ravindra007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

accelerate = ">=0.20.3"
chromadb = ">=0.3.0"
ctransformers = ">=0.2.25"
deepmerge = ">=1.1.0"
InstructorEmbedding = ">=1.0.1"
langchain = ">=0.0.181"
pydantic = ">=1.9"
pyyaml = ">=6.0"
quart = ">=0.18.3"
sentence-transformers = ">=2.2.2"
tqdm = ">=4.64.1"
transformers = ">=4.32.0"
typer = ">=0.9.0"
typing-extensions = ">=4.4.0"
# Document Loaders
extract-msg = ">=0.41.0"
pandoc = ">=2.3"
pypandoc = ">=1.11"
unstructured = ">=0.6.0"
"pdfminer.six" = ">=20221105"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
